# backend-skripsi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
api/controllers/: api_controller.py
api/routes/: api_routes.py
gnn_model/: mobile_vig.py
