[tool.poetry]
name = "gnn-backend"
version = "0.1.0"
description = "Backend App for GNN Skripsi"
authors = ["nabilfikrisp <mnabilfikrisp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"
flask-cors = "^4.0.1"
pillow = "^10.4.0"
timm = "1.0.3"
torch = "2.3.0"
torchvision = "0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"